1. Читаем файл конфигурации [#858]